[gd_scene load_steps=2 format=3 uid="uid://ui_hud"]

[ext_resource type="Script" path="res://scripts/UI/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="StageLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Stage 1"

[node name="LivesLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Lives: 3"
horizontal_alignment = 2

[node name="CurrencyLabel" type="Label" parent="Panel/TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.8, 0.6, 0.1, 1)
text = "0 SC"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="Panel/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -70.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Arrows: 30"
horizontal_alignment = 2

[node name="ShamanPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShamanTitle" type="Label" parent="ShamanPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "The Shaman Speaks..."
horizontal_alignment = 1

[node name="WisdomLabel" type="Label" parent="ShamanPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Every fortress has a forgotten vein; feel for its pulse."
autowrap_mode = 3
horizontal_alignment = 1
vertical_alignment = 1
